# 3DEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  main.cpp
engine/graphics/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.cpp  Input.h  OutputShader.cpp  OutputShader.h  ParameterSystem.cpp  ParameterSystem.h  Transform.h
engine/graphics/glsl/: Fragment.glsl  SDF.glsl
engine/math/: vec2.h  vec3.h
engine/objects/: Object.cpp  Object.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
engine/patterns/: Singleton.h
engine/settings/: PlayerControls.h
